@startuml
class Livre {
  -isbn : chaine
  -titre : chaine
  -auteur : chaine
  -nb_pages : entier
}

class BlueRay {
  -titre : chaine
  -réalisateur : chaine
  -durée : date
  -année_sortie : date

}

class Magazine {
    -No_magazine : entier
    -titre : chaine
    -date_publication : date
}

class Adhérant {
    -No_adherant : chaine
    -prenom : chaine
    -nom: chaine
    -email : email
    -date_adhésion : date
     ~genererNumero()
     ~renouvelerAdhésion()
     ~findInformationsAdherant()
     ~AdhesionValable()


}

class Emprunt {
    -No_emprunt : chaine
    -date_emprunt: date
    -date_retour : date
    ~EmpruntEnCours()
    ~EmpruntEstEnAlerte()
    ~DureeAutoriséEprunt()
}

abstract class Media {
    #titre: chaine
    #dureeEmptuntJours : int
    ~findInformationsMedia()

}

Media "1..1" --> "0..*" Emprunt : est emprunté par >
Adhérant "1..1" --> "0..*" Emprunt : emprunt >
Media <|-- Livre
Media <|-- BlueRay
Media <|-- Magazine








@enduml